Version : 4.12.5 #XG1
- AminEdit added new features, Body Human display will be expanded, and Mounted
- Serilog package update.
- IronSoftware.System.Drawing package update.
- Octokit package update.
- Serlog.Sinks.File package update.
- Microsoft.Web.WebVie2 package update.
- Add package AnimatedGif.
- Add support for hued AnimData, export AnimData to Gif.

Version : 4.12.4 #XG1
- Add About revised, removed more Richtextbox and added a matrix animation with the names of the developers, new links, and new information.
- Add Sound Loop.
- Add functionality to update the count of occupied and free sound IDs in real-time when sounds are added, removed, or the view is reloaded.
- Removed Escape key function, changed F2 key function to Ctrl+E, added Space key function to play/stop sound.
- Update Nuget Paket.
- Implemented functionality in the ServerStartBox for selecting, saving, and loading paths for the ServUO directory and Visual Studio, 
  as well as for starting the ServUO server or another server directly through the .exe.
- Add DesignStudio
- Fixed: When importing an image from the clipboard, the selected graphic ID was not retained in the LandTilesTileView.
- Added functionality to toggle LandTilesTileView background color between white and black upon clicking background.
- Add a ColorBox that enables interactive analysis of color information in an image. 
  By selecting pixels, the associated color values are determined and displayed in a RichTextBox.
- Add a ColorBox Texture.
- Add TextureColorForm allows for interactive color adjustments of textures.
- Fixed importing unicode font characters
- Fixed Amindata Start Error/stop error
- Added export to XML (centred+ format) in Multis tab (author Prapilk)
- Add support for import/export AnimData by @KevinEady
- Add TIFUnicode from (author Prapilk)
- Add Implemented color selection and saving for form and controls.
- Add image converter: black and white, different colors, and functions.